@@ -389,7 +389,6 @@ valueType org.fenixedu.academic.domain.util.i18n.Languages as Languages {
         String prevailingScientificArea;
         String sigla;
         String ministryCode;
-        String idCardName;
         String siteUrl;
         String code;
     }
