@@ -1,4 +1,5 @@
 - Refactor: Cleanup deprecated attends methods
+- Refactor: Cleanup deprecated degree slots
 
 32.0.2 (11-11-2020)
 - Bug fix: Fix the unnecessary PersistentGroup creation
